[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main Project/Level/Tiger Player-Goat AI  (algorithm)/Tiger for player (hard).gd" type="Script" id=1]
[ext_resource path="res://Main Project/Level/Tiger Player-Goat AI  (algorithm)/Goat for AI algorithm.gd" type="Script" id=2]
[ext_resource path="res://Main Project/Player/Tiger Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main Project/Board/Board.tscn" type="PackedScene" id=4]
[ext_resource path="res://Lines.tscn" type="PackedScene" id=5]
[ext_resource path="res://Main Project/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Main Project/DropZone/dropzone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Main Project/Player/Goat AI (Algorithm).tscn" type="PackedScene" id=8]
[ext_resource path="res://Main Project/GamePlay Scripts.gd" type="Script" id=9]

[node name="Goat AI  Algorithm" type="Node2D"]
script = ExtResource( 9 )

[node name="Board" parent="." instance=ExtResource( 4 )]
position = Vector2( -0.12929, 4.32288 )
scale = Vector2( 0.784856, 1.00961 )

[node name="HUD" parent="." instance=ExtResource( 6 )]
position = Vector2( 976, 0 )
scale = Vector2( 1.15784, 1.02025 )

[node name="Lines" parent="." instance=ExtResource( 5 )]

[node name="Zone1" parent="." instance=ExtResource( 7 )]
position = Vector2( 200, 100 )

[node name="Zone2" parent="." instance=ExtResource( 7 )]
position = Vector2( 300, 100 )

[node name="Zone3" parent="." instance=ExtResource( 7 )]
position = Vector2( 400, 100 )

[node name="Zone4" parent="." instance=ExtResource( 7 )]
position = Vector2( 500, 100 )

[node name="Zone5" parent="." instance=ExtResource( 7 )]
position = Vector2( 600, 100 )

[node name="Zone6" parent="." instance=ExtResource( 7 )]
position = Vector2( 200, 200 )

[node name="Zone7" parent="." instance=ExtResource( 7 )]
position = Vector2( 300, 200 )

[node name="Zone8" parent="." instance=ExtResource( 7 )]
position = Vector2( 400, 200 )

[node name="Zone9" parent="." instance=ExtResource( 7 )]
position = Vector2( 500, 200 )

[node name="Zone10" parent="." instance=ExtResource( 7 )]
position = Vector2( 600, 200 )

[node name="Zone11" parent="." instance=ExtResource( 7 )]
position = Vector2( 200, 300 )

[node name="Zone12" parent="." instance=ExtResource( 7 )]
position = Vector2( 300, 300 )

[node name="Zone13" parent="." instance=ExtResource( 7 )]
position = Vector2( 400, 300 )

[node name="Zone14" parent="." instance=ExtResource( 7 )]
position = Vector2( 500, 300 )

[node name="Zone15" parent="." instance=ExtResource( 7 )]
position = Vector2( 600, 300 )

[node name="Zone16" parent="." instance=ExtResource( 7 )]
position = Vector2( 200, 400 )

[node name="Zone17" parent="." instance=ExtResource( 7 )]
position = Vector2( 300, 400 )

[node name="Zone18" parent="." instance=ExtResource( 7 )]
position = Vector2( 400, 400 )

[node name="Zone19" parent="." instance=ExtResource( 7 )]
position = Vector2( 500, 400 )

[node name="Zone20" parent="." instance=ExtResource( 7 )]
position = Vector2( 600, 400 )

[node name="Zone21" parent="." instance=ExtResource( 7 )]
position = Vector2( 200, 500 )

[node name="Zone22" parent="." instance=ExtResource( 7 )]
position = Vector2( 300, 500 )

[node name="Zone23" parent="." instance=ExtResource( 7 )]
position = Vector2( 400, 500 )

[node name="Zone24" parent="." instance=ExtResource( 7 )]
position = Vector2( 500, 500 )

[node name="Zone25" parent="." instance=ExtResource( 7 )]
position = Vector2( 600, 500 )

[node name="Tiger" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Tiger Player" parent="Tiger" instance=ExtResource( 3 )]
position = Vector2( 200, 100 )

[node name="Tiger Player2" parent="Tiger" instance=ExtResource( 3 )]
position = Vector2( 600, 100 )

[node name="Tiger Player3" parent="Tiger" instance=ExtResource( 3 )]
position = Vector2( 200, 500 )

[node name="Tiger Player4" parent="Tiger" instance=ExtResource( 3 )]
position = Vector2( 600, 500 )

[node name="Goat" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Goat AI (Algorithm)" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 896, 48 )

[node name="Goat AI (Algorithm)2" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 824, 120 )

[node name="Goat AI (Algorithm)3" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 896, 184 )

[node name="Goat AI (Algorithm)4" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 824, 264 )

[node name="Goat AI (Algorithm)5" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 888, 344 )

[node name="Goat AI (Algorithm)6" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 816, 424 )

[node name="Goat AI (Algorithm)7" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 888, 496 )

[node name="Goat AI (Algorithm)8" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 776, 592 )

[node name="Goat AI (Algorithm)9" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 872, 592 )

[node name="Goat AI (Algorithm)10" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 664, 608 )

[node name="Goat AI (Algorithm)11" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 536, 608 )

[node name="Goat AI (Algorithm)12" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 424, 608 )

[node name="Goat AI (Algorithm)13" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 296, 608 )

[node name="Goat AI (Algorithm)14" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 168, 608 )

[node name="Goat AI (Algorithm)15" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 80, 560 )

[node name="Goat AI (Algorithm)16" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 64, 456 )

[node name="Goat AI (Algorithm)17" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 64, 344 )

[node name="Goat AI (Algorithm)18" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 64, 240 )

[node name="Goat AI (Algorithm)19" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 64, 144 )

[node name="Goat AI (Algorithm)20" parent="Goat" instance=ExtResource( 8 )]
position = Vector2( 64, 56 )
[connection signal="tigerplayerturnfinished" from="Tiger/Tiger Player" to="Goat" method="_on_Tiger_Player_tigerplayerturnfinished"]
[connection signal="tigerplayerturnfinished" from="Tiger/Tiger Player2" to="Goat" method="_on_Tiger_Player2_tigerplayerturnfinished"]
[connection signal="tigerplayerturnfinished" from="Tiger/Tiger Player3" to="Goat" method="_on_Tiger_Player3_tigerplayerturnfinished"]
[connection signal="tigerplayerturnfinished" from="Tiger/Tiger Player4" to="Goat" method="_on_Tiger_Player4_tigerplayerturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)" to="Tiger" method="_on_Goat_AI_Algorithm_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)2" to="Tiger" method="_on_Goat_AI_Algorithm2_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)3" to="Tiger" method="_on_Goat_AI_Algorithm3_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)4" to="Tiger" method="_on_Goat_AI_Algorithm4_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)5" to="Tiger" method="_on_Goat_AI_Algorithm5_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)6" to="Tiger" method="_on_Goat_AI_Algorithm6_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)7" to="Tiger" method="_on_Goat_AI_Algorithm7_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)8" to="Tiger" method="_on_Goat_AI_Algorithm8_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)9" to="Tiger" method="_on_Goat_AI_Algorithm9_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)10" to="Tiger" method="_on_Goat_AI_Algorithm10_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)11" to="Tiger" method="_on_Goat_AI_Algorithm11_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)12" to="Tiger" method="_on_Goat_AI_Algorithm12_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)13" to="Tiger" method="_on_Goat_AI_Algorithm13_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)14" to="Tiger" method="_on_Goat_AI_Algorithm14_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)15" to="Tiger" method="_on_Goat_AI_Algorithm15_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)16" to="Tiger" method="_on_Goat_AI_Algorithm16_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)17" to="Tiger" method="_on_Goat_AI_Algorithm17_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)18" to="Tiger" method="_on_Goat_AI_Algorithm18_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)19" to="Tiger" method="_on_Goat_AI_Algorithm19_goataiturnfinished"]
[connection signal="goataiturnfinished" from="Goat/Goat AI (Algorithm)20" to="Tiger" method="_on_Goat_AI_Algorithm20_goataiturnfinished"]
